--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<div class="row">
 
 		<div class="col-12 col-lg-6">
-			<h1> A veces nos encontramos ante el desafío de cambiarnos a nosotros mismos.</h1>
+			<h1> Cambié este texto en GITHUB.</h1>
 		</div>
 	</div>
 
